plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'application'
}

project.logger.lifecycle("Using Minecraft version: ${version}")

application {
	mainClass = "dev.mcbookshelf.mcdata.Main"
}

dependencies {
    compileOnly "net.fabricmc:fabric-loader:${loader_version}"
    implementation "net.bytebuddy:byte-buddy:1.18.+"
	minecraft "com.mojang:minecraft:${version}"
}

loom {
    accessWidenerPath = file("src/main/resources/mcdata.accesswidener")
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

tasks.withType(JavaExec).configureEach {
    systemProperty "joml.nounsafe", "true"
}

tasks.withType(JavaExec.class).configureEach {
	args = [version]
}
